<resources>
    <string name="app_name">ReminderApp</string>
    <string name="UserName">User Name</string>
    <string name="EnterListName">Enter name</string>
    <string name="AddList">Add List</string>
    <string name="EnterReminderName">Enter Reminder Name</string>
    <string name="enter_information">Enter Information</string>
    <string name="reminder_form_name">Name</string>
    <string name="reminder_form_type">Type</string>
    <string name="reminder_form_date">Date</string>
    <string name="reminder_form_time">Time</string>
    <string name="reminder_form_submit_button">Submit</string>
</resources>